--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,8 @@ rusqlite = "0.29.0"
 
 anyhow = "1.0"
 tokio-rusqlite = "0.4.0"
+pbkdf2 = { version = "0.12.1", features = ["simple"] }
+rand_core = {version = "0.6.4", features = ["std"]}
 
 [dev-dependencies]
 httpc-test = "0.1.1"
