--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ tokio = { version = "1", features = ["full"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
-axum = {version = "0.6", features = ["macros"]}
+axum = { version = "0.6", features = ["macros", "headers"] }
 tower-http = {version = "0.4.0", features = ["fs"]}
 tower-cookies = "0.9.0"
 
@@ -21,6 +21,8 @@ anyhow = "1.0"
 tokio-rusqlite = "0.4.0"
 pbkdf2 = { version = "0.12.1", features = ["simple"] }
 rand_core = {version = "0.6.4", features = ["std"]}
+chrono = "0.4.24"
+jsonwebtoken = "8.3.0"
 
 [dev-dependencies]
 httpc-test = "0.1.1"
